*Empty MediaWiki Message*

--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -605,3 +605,8 @@ Bestaand:A28 Verzorgingsplaats Witte Molen.JPG|Tussen de '''ofslagen 37 en 38'''
 {{Snelwegen Nederlaand}}
 
 [[Kategorie:Rieksweg 28| ]]
+[[Kategorie:Weg in Oaveriessel]]
+[[Kategorie:Weg in Gelderlaand]]
+[[Kategorie:Weg in Utrecht]]
+[[Kategorie:Weg in Dreanthe]]
+[[Kategorie:Weg in Grönningen]]
