*Empty MediaWiki Message*

--- a/N313.mw
+++ b/N313.mw
@@ -1,3 +1,5 @@
+[[Ofbeelding:NLD-N313.svg|right|100px]]
+[[Ofbeelding:Kaart Provinciale weg 313.png|thumb|Route van de N313]]
 De '''N313''' is nen previnsialen weg den de [[N18|Twenteroute]] ter heugte van [[Lechtenvoorde]] mit de [[N318]] bi'j [[Aalten]] ansluut. Den weg geet deur tot an de [[Duutsland|Duutse]] grenze richting [[Bokelt]].
 In Lechtenvoorde wöd et den 'Hamelandweg' eneumd, in Aalten de 'Hamelandroute'.
 
