*Empty MediaWiki Message*

--- a/N319.mw
+++ b/N319.mw
@@ -1,3 +1,6 @@
+[[Ofbeelding:NLD-N319.svg|right|100px]]
+[[Ofbeelding:Kaart_Provinciale_weg_319.png|thumb|Route van de N319]]
+
 De '''N319''' is nen previnsialen weg den löp van [[Warnsveld]] noar de [[Duutslaand|Duutse]] grenze achter [[Wenters]], bi'j [[Kotten]]. Den weg kump langs dizze plaetse:
 * [[Vorden]]
 * [[Kranenburg (Gelderland)|Kranenburg]]
