*Empty MediaWiki Message*

--- a/Ruslaand.mw
+++ b/Ruslaand.mw
@@ -10,7 +10,7 @@
 | religie = [[Russisch-Orthodoxe Karke|Russisch-orthodox]] (58%)<br /> [[islam]] (5%)<br />[[boeddhisme]] (5%)<br />[[jodendom]] (0,2%)<br />[[sjamanisme]]/[[animisme]]
 | regeringsvorm = [[Federaole rippebliek]]
 | km2 = 17.075.200 | pctwaeter = 0,5
-| inwoners = 142,7 miljoen (2006<ref>[[Kommersant]] [http://www.kommersant.com/page.asp?id=-8052 ''Russia's Population Down to 142.7 Million''] - 23 febrewaori 2006</ref>) | dichthied = 8,5 
+| inwoners = 146,8 ([[2020]])<ref>https://www.nationsonline.org/oneworld/population-by-country.htm</ref><ref>Met de [[Krim]]</ref> | dichthied = 8,5 
 | muntienhied = [[Roebel]] | valutakode = RUR
 | tiedzone =  +2 tot + 12
 | volkslied = [[Gimn Rossijskoj Federatsii]]
