--- a/Verzörgingsplaats_Haorste.mw
+++ b/Verzörgingsplaats_Haorste.mw
@@ -7,6 +7,7 @@ De Haorsterbroekweg (Haersterbroekweg) gaot krek ten zuden van de verzörgingspl
 <references/>
 
 {{Dialekt|sdz}}
+{{Verzörgingsplaatsen Rieksweg 28}}
 
 [[Kategorie:Zwolle]]
 [[Kategorie:Rieksweg 28]]
