*Empty MediaWiki Message*

--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -603,6 +603,7 @@ Bestaand:A28 Verzorgingsplaats Witte Molen.JPG|Tussen de '''ofslagen 37 en 38'''
 
 {{Dialekt|sdz}}
 {{Snelwegen Nederlaand}}
+{{Verzörgingsplaatsen Rieksweg 28}}
 
 [[Kategorie:Rieksweg 28| ]]
 [[Kategorie:Weg in Oaveriessel]]
