--- a/Kikvors.mw
+++ b/Kikvors.mw
@@ -5,7 +5,7 @@ Een '''kikvors''' of '''kikker''' ([[Latien]]: ''Anura'') is een [[amfibisch]] b
 Een kikvors leeft op 't land, bijvoorbeeld  in 't [[gras]] en sommige soorten in bomen, maar meestal in [[zoet water|zoet water]]. In zout water kunnen ze niet overleven.
 
 == Ontwikkeling ==
-Een kikvors komt op de weeld as een [[donderpad]] (of ''donderkop'') die uut één van de eitjes komt die 't vrouwtjen leit. De eitjes neumen we [[kikkerdril]]. Donderpadden hen vinnen en [[kieuw]]en. As ze groter worren raken ze der start en kieuwen kwiet en daor kommen vier lange benen veur in de plek. Een volgreuide kikvors kan een heel eind springen mit disse benen.
+Een kikvors komt op de wereld als een [[donderpad]] (of ''donderkop'' ook wel kikkervisjes genoemd) die uit één van de eitjes komt die 't vrouwtjen leit. De eitjes noemen we [[kikkerdril]]. Donderpadden hebben vinnen en [[kieuw]]en. Als ze groter worden raken ze de staart en kieuwen kwijt en daarvoor in de plaats komen vier lange poten. Een volgroeide kikvors kan een heel eind springen met deze poten.
 
 == Beschrieving ==
 Ze hen een lange [[tong]] die ze gebruken um [[insektn|insecten]] te vangen. De kikvors maakt een ampart geluud, dat ''kwaken'' heet. Sommige soorten bin giftig, 't gif van sommige soorten is zelfs zo giftig da-j der an dood kunnen gaon.
