/* Beschrijving */Typefouten gecorrigeerd

--- a/Kikvors.mw
+++ b/Kikvors.mw
@@ -7,10 +7,10 @@ Een kikvors leeft op 't land, bijvoorbeeld  in 't [[gras]] en sommige soorten in
 == Ontwikkeling ==
 Een kikvors komt op de wereld als een [[donderpad]] (of ''donderkop'' ook wel kikkervisjes genoemd) die uit één van de eitjes komt die 't vrouwtjen leit. De eitjes noemen we [[kikkerdril]]. Donderpadden hebben vinnen en [[kieuw]]en. Als ze groter worden raken ze de staart en kieuwen kwijt en daarvoor in de plaats komen vier lange poten. Een volgroeide kikvors kan een heel eind springen met deze poten.
 
-== Beschrieving ==
-Ze hen een lange [[tong]] die ze gebruken um [[insektn|insecten]] te vangen. De kikvors maakt een ampart geluud, dat ''kwaken'' heet. Sommige soorten bin giftig, 't gif van sommige soorten is zelfs zo giftig da-j der an dood kunnen gaon.
+== Beschrijving ==
+Ze hebben een lange [[tong]] die ze gebruiken om[[insekten|insecten]] te vangen. De kikvors maakt een apart geluid, dat ''kwaken'' heet. Sommige soorten zijn giftig, 't gif van sommige soorten is zelfs zo giftig dat het dodelijk is voor mensen. 
 
-In landen as [[Frankriek]], [[Volksrippebliek China|China]] en midwesten van [[Verienigde Staoten van Amerika|Amerika]] eten ze kikkerbilletjes.
+In de volgende landen eten ze kikkerbilletjes;  [[Frankrijk]], [[Volksrepubliek China|China]] en het midwesten van [[Verenigde Staten van Amerika|Amerika]].
 
 == [[Nedersaksisch K|Nedersaksisch]] ==
 * [[Drèents]]: ''kikker{{small()|d}}''
