--- a/Kikvors.mw
+++ b/Kikvors.mw
@@ -1,16 +1,16 @@
 [[Ofbeelding:Magnificent tree frog (Litoria splendida) crop.jpg|250px|thumb|Een kikvors]]
-[[Ofbeelding:Frog distribution.png|250px|thumb|Een kaart met daarop in 't zwart, de plekken waar de kikvors voorkomt]]
-Een '''kikvors''' of '''kikker''' ([[Latien]]: ''Anura'') is een [[amfibisch]] beest uut de orde van de [[kikvorsachtigen]], die in verschillende landen en werelddelen voorkomt.
+[[Ofbeelding:Frog distribution.png|250px|thumb|Een kaort mit daorop in 't zwart, de plekken waor de kikvors veurkomt]]
+Een '''kikvors''' of '''kikker''' ([[Latien]]: ''Anura'') is een [[amfibisch]] beest uut de orde van de [[kikvorsachtigen]], die in verschillende landen en weelddelen veurkomt.
 
-Een kikvors leeft op 't land, bijvoorbeeld  in 't [[gras]] en sommige soorten in bomen, maar meestal in [[zoet water|zoet water]]. In zout water kunnen ze niet overleven.
+Een kikvors leeft op 't land, bieveurbeeld in 't [[gres]] en sommige soorten in bomen, maar meestentieds in [[zeut waoter|zoet water]]. In zout water kunnen ze niet overleven.
 
 == Ontwikkeling ==
-Een kikvors komt op de wereld als een [[donderpad]] (of ''donderkop'' ook wel kikkervisjes genoemd) die uit één van de eitjes komt die 't vrouwtjen leit. De eitjes noemen we [[kikkerdril]]. Donderpadden hebben vinnen en [[kieuw]]en. Als ze groter worden raken ze de staart en kieuwen kwijt en daarvoor in de plaats komen vier lange poten. Een volgroeide kikvors kan een heel eind springen met deze poten.
+Een kikvors komt op de weeld as een [[donderpad]] (of ''donderkop'') die uut één van de eitjes komt die 't vrouwtjen leit. De eitjes neumen we [[kikkerdril]]. Donderpadden hen vinnen en [[kieuw]]en. As ze groter worren raken ze der start en kieuwen kwiet en daor kommen vier lange benen veur in de plek. Een volgreuide kikvors kan een heel eind springen mit disse benen.
 
-== Beschrijving ==
-Ze hebben een lange [[tong]] die ze gebruiken om [[insekten|insecten]] te vangen. De kikvors maakt een apart geluid, dat ''kwaken'' heet. Sommige soorten zijn giftig, 't gif van sommige soorten is zelfs zo giftig dat het dodelijk is voor mensen. 
+== Beschrieving ==
+Ze hen een lange [[tong]] die ze gebruken um [[insektn|insecten]] te vangen. De kikvors maakt een ampart geluud, dat ''kwaken'' heet. Sommige soorten bin giftig, 't gif van sommige soorten is zelfs zo giftig da-j der an dood kunnen gaon.
 
-In de volgende landen eten ze kikkerbilletjes;  [[Frankrijk]], [[Volksrepubliek China|China]] en het midwesten van [[Verenigde Staten van Amerika|Amerika]].
+In landen as [[Frankriek]], [[Volksrippebliek China|China]] en midwesten van [[Verienigde Staoten van Amerika|Amerika]] eten ze kikkerbilletjes.
 
 == [[Nedersaksisch K|Nedersaksisch]] ==
 * [[Drèents]]: ''kikker{{small()|d}}''
