*Empty MediaWiki Message*

--- a/Hearts_of_Iron_IV.mw
+++ b/Hearts_of_Iron_IV.mw
@@ -3,7 +3,7 @@
 == Gameplay ==
 In et spöl ku-j kiezen of ie in [[1936]] of in [[1939]] begint kört veur de [[Twiede Wereldoorlog]]. De ontwikkelings in et spöl gaot töt [[1948]], maar ie kunt wieder as dit jaor spölen. Er bint allenig gien ni'je technieken meer vri'j te spöllen. Et spöl giet veural oaver [[Oorlog|militaire]], [[Politiek|politieke]] en [[Economie|economische]] (deur et mäken van verschillende febrieken en waopens) dingen. Via National Focusses bint er (hiele) belangrieke dingen te doen of te veraanderen in een laand det zo'n National Focus doet en ofmaakt.
 
-Op [[Steam (softwareplatförm)|Steam]] bint er in de workshop alderbärstends völle mods en anpassings an et spöl te vinden die deur spöllers van et spöl emaakt bint. Deur disse dingen te gebruken kan et spöl uut ebreid wördden
+Op [[Steam (softwareplatförm)|Steam]] bint er in de workshop alderbärstends völle mods en anpassings an et spöl te vinden die deur spöllers van et spöl emaakt bint. Deur disse dingen te gebruken kan et spöl slim uut ebreid wördden
 
 == DLC ==
 Veur et spöl bint er verschillende [[DLC|DLC's]] te kriegen. Hieronder staot een lieste van alle uutbreidings met daorbi'j een körte uutleg oaver de toe evoegde ni'je dingen (niet alles benuumd):
