--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -29,7 +29,7 @@ Zwolle is in de [[middeleewn|middeleeuwen]] ontstaon op een dekzandrugge tussen 
 
 De oldste skriftelike vermelding, uut [[1040]], ef t aover n an Sinte-Michaël ewi'jde parochiekerke. In [[1230]] kreeg Zwolle van de Biskop van Utrecht stadsrechten. In de late middeleeuwen trad t toe töt de Anze en is t samen met [[Daeventer]] en [[Kampen (Overiessel)|Kampen]] n belangriek andelssentrum ewörren. In de [[15e eeuw]] leidde Geert Grote ier de 'Moderne toewi'jding'.
 
-Bi'j de stadsbrand van 1324 die an esteuken was döör [[Zweder van voorst|Zweder van Voorst]] branden bi'jna d'iele stad af. De kapel, et refter van de Bethlehemklooster en negen gebouwen bleven staon umdät zie van stien waren ebouwd. De stad werd nöör 't westen hen erbouwd nöö de brand.
+Bi'j de stadsbrand van 1324 die an esteuken was deur [[Zweder van voorst|Zweder van Voorst]] branden bi'jna d'eele stad af. De kapel, et refter van de Bethlehemklooster en negen gebouwen bleaven staon umdät zie van stien ebouwd waren. De stad werd nöör 't westen hen erbouwd nao de brand.
 
 Zie ook de pagina [[Zwollerkärspel]]
 
