*Empty MediaWiki Message*

--- a/Nedersaksische_warkwoordsvörms.mw
+++ b/Nedersaksische_warkwoordsvörms.mw
@@ -64,7 +64,7 @@ Ie wordt verzöcht um t understaonde schema an te holden. Ie kunt underan t sche
 | Ie 
 | Ie 
 | Jim 
-| I'j, i'jlu
+| I'j, i'jlu, (jullie)
 | Iej, iejleu
 | I-j
 | Julen, julie**
