*Empty MediaWiki Message*

--- a/Saksenros.mw
+++ b/Saksenros.mw
@@ -11,7 +11,7 @@ t Swaarte peerd is nog aait te zain ien t woapen van de regio [[Herford]] ien No
 n Aander theorie is dat t [[Sleipnir]], t peerd van [[Woden]] is, de belaangriekste god van de maiste Germoanse stammen. Van dit peerd zol ook t witte peerd van [[Sunterkloas]] ôfstammen.
 
 Ook bun d'r op veul oale (Saksische) boerderij'n [[gewelteekn|gieveltekens]] te vin'n mit 2 peerdekoppen, in Tweante moar ook tot in Mekelnborg-Vörpommern. Die peerdekoppen vind men ook weer ien 't dorpswoapen vaan 't Leegsaksische Weste, moar ook in 't logo van de Raiffeisen baank.
-In sommige sages zegt de leu dat 't Hengis en Horsa bunt, de Saksen die as Engelaand erovert hebt. Moar 't kan ook 'n mythologische eursprong hebb'n.
+In sommige sages zegt de leu dat 't [[Hengest en Horsa|Hengis en Horsa]] bunt, de Saksen die as Engelaand erovert hebt. Moar 't kan ook 'n mythologische eursprong hebb'n.
 
 {{commonscat|Sachsenross}}
 
