*Empty MediaWiki Message*

--- a/Russisch.mw
+++ b/Russisch.mw
@@ -1,4 +1,4 @@
-t '''Russisch''' (Ru. ''Русский язык'', ''Rússkij jazýk'', {{IPA|['ru.skʲɪj jɪ.'zɨk]}}) is de deur de mainste luu sprokene van de [[Sloavische toalen]]. t Is n [[Indo-Europese toal]], en ain van de drij [[Oost-Sloavische toalen]] noast [[Oekraïens]] en [[Wit-Russisch]]. Gemain Oost-Sloavisch, de voorloper van dij drij, wordt sinds tiende aiw schreven.
+t '''Russisch''' (Ru. ''русский язык'', ''rússkij jazýk'', {{IPA|['ru.skʲɪj jɪ.'zɨk]}}) is de deur de mainste luu sprokene van de [[Sloavische toalen]]. t Is n [[Indo-Europese toal]], en ain van de drij [[Oost-Sloavische toalen]] noast [[Oekraïens]] en [[Wit-Russisch]]. Gemain Oost-Sloavisch, de voorloper van dij drij, wordt sinds tiende aiw schreven.
 
 t Russisch het de meerderhaid van zien oorspronkelke [[grammatica|grammatikoale]] kenmaarken beholden, zo as zès [[noamval]]len, en t overgrote dal van de [[lexicon]] stamt oet t olde [[Proto-Sloavisch]]. Doarnoast bevat t Russisch n groot antal lainde woorden en modaare internationalismen veur dingen dij te moaken hebben mit poletiek, wetenschap en technologie. Russisch is poletiek ain van de belangriekste toalen ter wereld, en is ain van d'offisjele waarktoalen van de [[Verenigde Noaties]].
 
