--- a/Knoal_(gemainte).mw
+++ b/Knoal_(gemainte).mw
@@ -1,7 +1,7 @@
 {{Gemeynde |
 name = Knoal |
-bestandsname vlagge = Stadskanaal flag.png |
-bestandsname wåpen = Coat_of_arms_of_Stadskanaal.png |
+bestandsname vlagge = Flag of Stadskanaal.svg |
+bestandsname wåpen = Ontstwedde Stadskanaal wapen.svg |
 lokaty = LocatieStadskanaal |
 provincy = |
 höyvdplaatse = [[Knoal (dörp)|Knoal]] |  
