*Empty MediaWiki Message*

--- a/Neanderthaler.mw
+++ b/Neanderthaler.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Neanderthalensis.jpg|thumb|Skelet van een neanderthaler]]
 
-De '''neanderthaler''' (''homo (sapiens) neanderthalensis'') is een uutestörven mensksoorte. Se bint in hunderdusenden jåren tyd untwikkeld uut [[Homo heidelbergensis]]. Bütte van neanderthalers bint evünden in [[Europa]], et [[Midden-Oosten|Middenousten]] en [[Azië|Centraalasie]].
+De '''neanderthaler''' (''homo (sapiens) neanderthalensis'') is een uutestörven mensksoorte. Se bint in hunderdusenden jåren tyd (mögelik) untwikkeld uut [[Homo heidelbergensis]]. Bütte van neanderthalers bint evünden in [[Europa]], et [[Midden-Oosten|Middenousten]] en [[Azië|Centraalasie]].
 
 ===Untdekking=== 
 Neanderthalerbötte bint untdekked döär een koppel steynhouwers in et [[Neanderdal]] in 1856 an de rivyre de [[Düssel]], in [[Duutslaand|Düütskland]]. An dit dal hevt de mensksoorte düs ouk syn name te danken. Et güng üm een skeadeldak, een spaakbeyn, twey dybeyne, een upperarmbeyn, een ellepype en wat brukstükken.
