*Empty MediaWiki Message*

--- a/Neanderthaler.mw
+++ b/Neanderthaler.mw
@@ -1,21 +1,21 @@
-[[Bestaand:Neanderthalensis.jpg|thumb|Skelet van een neanderthaler]]
+[[Bestaand:Neanderthalensis.jpg|thumb|Skelet van en neanderthaler]]
 
-De '''neanderthaler''' (''homo (sapiens) neanderthalensis'') is een uutestörven mensksoorte. Se bint in hunderdusenden jåren tyd (mögelik) untwikkeld uut [[Homo heidelbergensis]]. Bütte van neanderthalers bint evünden in [[Europa]], et [[Midden-Oosten|Middenousten]] en [[Azië|Centraalasie]].
+De '''neanderthaler''' (''homo (sapiens) neanderthalensis'') is en uutestörven mensksoorte. Se bint in hunderdusenden jåren tyd (mögelik) untwikkeld uut [[Homo heidelbergensis]]. Bütte van neanderthalers bint evünden in [[Europa]], et [[Midden-Oosten|Middenousten]] en [[Azië|Centraalasie]].
 
 ===Untdekking=== 
-Neanderthalerbötte bint untdekked döär een koppel steynhouwers in et [[Neanderdal]] in 1856 an de rivyre de [[Düssel]], in [[Duutslaand|Düütskland]]. An dit dal hevt de mensksoorte düs ouk syn name te danken. Et güng üm een skeadeldak, een spaakbeyn, twey dybeyne, een upperarmbeyn, een ellepype en wat brukstükken.
+Neanderthalerbötte bint untdekked döär en koppel steynhouwers in et [[Neanderdal]] in 1856 an de rivyre de [[Düssel]], in [[Duutslaand|Düütskland]]. An dit dal hevt de mensksoorte düs ouk syn name te danken. Et güng üm en skeadeldak, en spaakbeyn, twey dybeyne, en upperarmbeyn, en ellepype en wat brukstükken.
 
 Achterof bekeaken was et eyrste neanderthalerskelet al in 1829 in et [[België|Belgiske]] [[Luik]] evünden. Later ouk in [[Nederland]] en [[Fraankriek|Frankryk]].
 
-Eyrst dachtten lüde dat et gewoan van et headendaagse model was, mar wal een misförmden. Wårskynlik een 'idioot'. Anderen dachtten dat et wal eyns een menske uut de [[iestied|ystyd]] kun weasen. En et platyn van de neanderthaler as een wöösteling en lykend up een gorilla besteyt altyd noch, mar dår kümt sötys an verandering in. 
+Eyrst dachtten lüde dat et gewoan van et headendaagse model was, mar wal en misförmden. Wårskynlik en 'idioot'. Anderen dachtten dat et wal eyns en menske uut de [[iestied|ystyd]] kun weasen. En et platyn van de neanderthaler as en wöösteling en lykend up en gorilla besteyt altyd noch, mar dår kümt sötys an verandering in. 
 
 Apart is wal dat [[Charles Darwin]] niks esegd of eskreaven hevt oaver de neanderthaler.
 
 ===Lichaamsbow===
-Neanderthalers waren gewoan een mensksoorte, arg gelyke an uns. Mar der waren ouk seaker verskillen. So wördden sy neet arg lang: 150  töt 160 centimeater, mar swårder van lyv en möägelik flink wat starker. In vergelyking med uns hadden se langwarpigere höyvden, een swåre wenkbrouwboage, de kinne stünd neet vöäruut en se hadden een dikke nöäse. Neanderthalers waren blykbår geyn gode renners, want de underbeyne waren kleiner. Vermödelik waren de ousterske varianten wat slanker as de westersken, wat med et klimåtverskil te maken hevt. Wal hadden se de harsens grouter as dat van uns. Wat de språkmöägelikheyden angeyt waren de neanderthalers seaker gelyke an uns.
+Neanderthalers waren gewoan en mensksoorte, arg gelyke an uns. Mar der waren ouk seaker verskillen. So wördden sy neet arg lang: 150  töt 160 centimeater, mar swårder van lyv en möägelik flink wat starker. In vergelyking med uns hadden se langwarpigere höyvden, en swåre wenkbrouwboage, de kinne stünd neet vöäruut en se hadden en dikke nöäse. Neanderthalers waren blykbår geyn gode renners, want de underbeyne waren kleiner. Vermödelik waren de ousterske varianten wat slanker as de westersken, wat med et klimåtverskil te maken hevt. Wal hadden se de harsens grouter as dat van uns. Wat de språkmöägelikheyden angeyt waren de neanderthalers seaker gelyke an uns.
 
 ===Kultuur===
-Neanderthalers waren knyvtige mensken. Getüge de vöäle vündsen van steynen warktügen so as vuustbylen en skrapers. Summige lüde denket dat de plyssteyn, ümme deerhüden te bewarken, döär de neanderthaler uutevünden is, en later döär moderne mensken oaverenömmen is. Ouk hadden sy verskillende wyses ümme vüür te maken, wat wal händig is as y in een ystyd leavt. De meyste oaverblyvsels van neanderhalers bint in grotten evünden, wat dan west up dat sy meystentyds in grotten leaven en slöäpen. Vöäle anwysings bint der vöär dat sy der een godsdeenst der up nå eholden en ear douden med allerlei rituelen begraven.
+Neanderthalers waren knyvtige mensken. Getüge de vöäle vündsen van steynen warktügen so as vuustbylen en skrapers. Summige lüde denket dat de plyssteyn, ümme deerhüden te bewarken, döär de neanderthaler uutevünden is, en later döär moderne mensken oaverenömmen is. Ouk hadden sy verskillende wyses ümme vüür te maken, wat wal händig is as y in en ystyd leavt. De meyste oaverblyvsels van neanderhalers bint in grotten evünden, wat dan west up dat sy meystentyds in grotten leaven en slöäpen. Vöäle anwysings bint der vöär dat sy der en godsdeenst der up nå eholden en ear douden med allerlei rituelen begraven.
 
 {{Dialekt|sdz}}
 
