--- a/De_Holterhoekse_Heijn.mw
+++ b/De_Holterhoekse_Heijn.mw
@@ -3,9 +3,9 @@ De '''Holterhoekse Heijn''' is op e-zat op 12 janurari 2013 deur 5 jonge kearls 
 
 Dee jongs organiseert feestjes in café en in zalen. 
 
-'t Eerste feest dat heet'n: ''Trek de Knippe''. Dit wodd'n eholl'n in de Koeienstal te Holterhook. De baze van 't cafe zoog 't helemoal zitten toon de kearls 't veur stell'n. De doatum wodd'n vast e-at op de 2e van meert, in 't joar 2013. The Plodde Band zol de oavend volmaak'n, in samenwarking met de BH-Formatie. Een budget van moar 'n paar honderd euro, dat was toon nog wal genog. 
+'t Eerste feest dat heetn: ''Trek de Knippe''. Dit wodn eholn in de Koeienstal te Holterhook. De baze van 't cafe zoog 't helemoal zitten toon de kearls 't veursteln. De doatum wodn vast ezat op de 2e van meert, in 't joar 2013. The Plodde Band zol de oavend volmaakn, in samenwarking met de BH-Formatie. Een budget van moar 'n paar honderd euro, dat was toon nog wal genog. 
 
-De bedoeling bi-j 't organiseer'n van zulke feestjes is um kleane feestjes weer 'in' te maken. Teeg'nwoordig goat jongeleu allenig nog moar noar grote festijnen hen, de Holterhoekse Heijn probeert dat kleane weer terug te kriegen.
+De bedoeling bi-j 't organiseern van zulke feestjes is um kleane feestjes weer 'in' te maken. Teegnwoordig goat jongeleu allenig nog moar noar grote festijnen hen, de Holterhoekse Heijn probeert dat kleane weer terug te kriegen.
 
 Van eure veurolders hebt ze leerd: Klean beginnen dan kump ´t grote van eiges wal.
 
