*Empty MediaWiki Message*

--- a/Fortnite.mw
+++ b/Fortnite.mw
@@ -2,5 +2,9 @@
 
 Save the World en Creative draiden good vöär Epic Games, mär et is vöäral Fortnite Battle Royale wat unwys vöäle spöäld wör oaver de heyle wearld. Dat hevt der vöäral med te maken dat et gratis te spöälen is, mär ouk döärdat et makkelik up [[smartphone|klookfoons]] draien deade en et grafisk neet te angrypend was, wårdöär en jöögdig publik et kunde spöälen. Binnen en jår tröäk et spel meyr as 125 miljoon spöälers en haalden dårmed hunderden miljonen an euro's de månd binnen. Et wör en kultureel fenomeen, wårby as vöäral teeners heyle dage satten te spöälen en de typiske danskes dee as karakters uut et spöl mangs doot, in et echt nådeaden.
 
+De readen at der souvöäle geld in ümme geyt is dat der bedryve reklame in et spel magt invoren, mär ouk ümdat spöälers vöär en klein bedrag bepålde kleyder en panzer köänet bykoupen.
+
+Inmiddels wordet der heyle [[esport]]wedstryden med Fortnite espöäled, wårin as höyvdpryse töt in de miljonen loupet.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Spel]]
