--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -121,6 +121,8 @@ Et antal sprekers van et [[Nederlaands Leegsaksisch|Nederlaands-Nedersaksisch]] 
 ===Duutslaand===
 Et antal aktieve sprekers van et Nedersaksisch wördt veur Duutslaand vake rond de 5,5 miljoen eschat,<ref name="staff.uni-oldenburg.de">Volgens http://www.staff.uni-oldenburg.de/gabriele.diekmann-droege/9361.html</ref> waorvan zo'n vier miljoen meensen de taal goed tot uutstekend kunnen spreken.<ref>27% van bevolking van Sleeswiek-Holsteen, 23% van Mekelenbörg-Veurpommeren, 14% van Nedersaksen, 10% van Noordrijn-Westfaolen en nog es 5% van Braandenbörg en Saksen-Anhalt, samen zo'n vier miljoen – nog niet inbegrepen bin Hambörg en Bremen en de rond 200.000 sprekers van et [[Plautdietsch]], die overwegend buten de onderzeuksgebiejen woenen, antallen volgens [http://www.germsem.uni-kiel.de/ndnl/materialien/Lehre%20Prof.%20Elmentaler%20Sommer%2010/pdf-Folien%20Vorlesung%20Standard%20und%20Substandard%20SoSe%202010/Kopie%20von%20pdf-Folien/8.pdf ''Vorlesung „Niederdeutsch in Geschichte und Gegenwart“ – Niederdeutsch heute: Eine Bestandsaufnahme''] (citaot van Frerk Möller: ''Plattdeutsch im 21. Jahrhundert. Bestandsaufnahme und Perspektiven.'' Leer 2008, S. 22&nbsp;f.)</ref> Zo'n 10,2 miljoen Duutsers hebben enige passieve kennis van et Nedersaksisch en zo'n twee miljoen meensen spreken et vake.<ref name="staff.uni-oldenburg.de"/> Hierbie koemen de rond 200.000 sprekers van et [[Plautdietsch]], die overwegend buten de onderzeuksgebiejen woenen en bin daorumme dus oek niet mee-eneumen in de telling. Et antal passieve sprekers, dit wil zegen de meensen die et Nedersaksisch verstaon, wördt vake mit tien miljoen en hoger an-egeven veur Duutslaand, mer disse antallen kunnen oek veule hoger liggen (kiek hierboven).
 
+In Duutslaand zou et antal sprekers op bienao 5 miljoen liggen in [[2016]]. 15,7% van et Nedersaksische gebied zou et spreken kunnen. In [[2007]] was dit nog 14,3% en in [[1985]] 35%.<ref>Astrid Adler Christiane Ehlers Reinhard Goltz Andrea Kleene Albrecht Plewnia, [https://www.ins-bremen.de/fileadmin/ins-bremen/user_upload/umfrage2016/broschuere-umfrage.pdf STATUS UND GEBRAUCH DES NIEDERDEUTSCHEN 2016] (2016). Geraadpleegd op 23 januari 2021.</ref>
+
 ===Denemarken===
 In Denemarken spreekt allinnig nog een fraksie van de Duutse minderheid (zo'n 20.000 meensen) nog [[Noord-Sleeswieks]].
 
