Uutspraok ofezwakt: volgens mij bint der juust aordig wat aoverienkomsten (koek, wörst, stamppot...)

--- a/Nedersaksiese_gerechten.mw
+++ b/Nedersaksiese_gerechten.mw
@@ -1,4 +1,4 @@
-Mit '''Nedersaksisch gerechten''' wordt bedoeld ''alle culinaire specialiteiten in de gebieden waor of 't [[Nedersaksisch]] praot wordt''. Dit, umdat wat de ''[[Keuken per laand|cuisine]]'' aangiet de Nedersaksische gebieden wienig mit mekaor te maoken hebt. Bie de Nedersaksische gerechten wordt ok de dranken en andere streekproducten rekend en de gerechten die vrogger allinig nog maokt werden. Umdat d'r een partie dialecten praot wordt in 't Nedersaksische gebied, bint de secties hier ok per regio in een ander dialect schreven.
+Mit '''Nedersaksisch gerechten''' wordt bedoeld ''alle culinaire specialiteiten in de gebieden waor of 't [[Nedersaksisch]] praot wordt''. Dit, umdat wat de ''[[Keuken per laand|cuisine]]'' angiet de Nedersaksische gebieden onderling op punten verschilt. Bie de Nedersaksische gerechten wordt ok de dranken en andere streekproducten rekend en de gerechten die vrogger allinig nog maokt werden. Umdat d'r een partie dialecten praot wordt in 't Nedersaksische gebied, bint de secties hier ok per regio in een ander dialect schreven.
 [[Bestaand:Koart Leegsaksisch.png|right|250px|Leegsassisch in Nederlaand]]
 
 == Wat de gebied wel gemien hebt ==
