--- a/Nedersaksiese_gerechten.mw
+++ b/Nedersaksiese_gerechten.mw
@@ -6,7 +6,7 @@ Netas in de rest van Nederlaand, België en Noord-Duutslaand besteet 't heufdger
 
 De Nedersaksische keuken is oaver 't algemien gien oetgebreide keuken, vergeleken mit bieveurbeeld de Beiernse of Swaobische keuken. Dit hef te maoken mit 't feit dat 't Nedersaksisch gebied laank n relatief arm gebied was. De mieste luu muzzen heur eigen produceerde producten gebruken, de producten van naobers of dingen die in de natuur te vinden bint. In summige gevallen harren luu toegang tot marken, waor ze mangs ok 'n paor producten kopen konden. In Duutslaand is de keuken wat rieker, deur invloeden vanoet 't zuden, zo as de schnitzel en de braodworst.
 
-Umdat stamppot, waorbij de ingrediënten mit mekaar in een pot samendaon bint, een belangriek onderdiel is van de traditionele Nedersaksische keuken, is der een aordig algemien gebruuk um 't eten op oen börd te ''prakken'' veurdaj 't opeet: mit de vork 't vleis, de eerappels en de gruunte in kleine stokkies drokken en mit mekaar - en mit de [[stip]] - te vermengen.
+Umdat stamppot, waorbij de ingrediënten mit mekaar in een pot samendaon bint, een belangriek onderdiel is van de traditionele Nedersaksische keuken, is der een aordig algemien gebruuk um 't eten op oen börd te ''prakken'' veurdaj 't opeet: mit de vork 't vleis, de eerappels en de gruunte in kleine stokkies drokken en mit mekaar - en mit de [[stip]] - vermengen.
 
 {{Dia|Schreven in t [[Midden-Drèents]]}}
 
