--- a/H-deletie.mw
+++ b/H-deletie.mw
@@ -1,4 +1,4 @@
-'''H-deletie''' wul zeggen da'j de letter [[h]] nich oetsprekt op steaden woar dat-e vanoalds wal steet/steund. 't Keump in diverse sproaken en dialecten veur, woaronder in 'n poar [[Nedersaksisch]]e dialecten.
+'''H-deletie''' wul zeggen da'j de letter [[h]] nich oetsprekt op steas woar dat-e vanoalds wal steet/steund. 't Keump in diverse sproaken en dialecten veur, woaronder in 'n poar [[Nedersaksisch]]e dialecten.
 
 De ''h'' is gennen starken klaank: 't is nich mear as 'nen oamtocht woarbie met 'n moond niks edoan wordt. Doarum kan-e ok maklijk verdwienen. De praktijk hef oetwezen dat dat, as dat 'nmoal in de mode keump, zik rap oawer de omgeawing verspreidt.
 
