*Empty MediaWiki Message*

--- a/2020.mw
+++ b/2020.mw
@@ -1,7 +1,8 @@
 {{NavJaor}}
 
 == Gebeurtenissen ==
-* ...
+* 15 meert - Nederlaand giet in [[lockdown]] teagen de verspreiding van et [[COVID-19|coronavirus]]
+*14 december - Nederlaand giet opni'j in lockdown um de verspreiding van et coronavirus te verminderen.
 
 == Geboorn ==
 * ...
