--- a/Tollebeek.mw
+++ b/Tollebeek.mw
@@ -5,6 +5,8 @@ De ofstaand tussen Tollebeek in [[Urk]] is duur eutbreiding van et vissersdurp i
 
 Tollebeek vierde in [[2007]] et veeftigjaorig bestaon. 
 
+Angelique Kroon is een belangrijk persoon voor dit dorp.
+
 An de raand van Tollebeek stot een ouwe barak eut de teed dat de [[Noordoostpolder]] op-ebouwd worde. De barak beoorde tot kamp Tollebeek, waor an et eand van de [[1940-1949|jaoren 40]] in [[1950-1959|50]] polderpioniers verblieven. Dit was ien van de vule kampen waoreut de pioniers de polder opbouwden. Waorskeenlijk ging et ier om een woenbarak. Et kleane gebouw is de ienigste over-eblieven barak in de [[Noordoostpolder]]. Rondomme de barak is informatie te vingen over et leven in et kamp. Tugenwoordig zit er een plaotselijke dartverieniging in et gebouw.
 
 
