--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -117,6 +117,57 @@ Et antal sprekers van et [[Nederlaands Leegsaksisch|Nederlaands-Nedersaksisch]] 
 * [[Nederlaandse gebaorentaal]] 20.000
 * [[Papiaments]] 13.000 
 * [[Engels]] 5.000
+In 1995, 1997, 1999, 2001, 2003 en 2011 hebben er representatieve steekproeven eweest die disse ciefers gaven<ref>[https://www.slideshare.net/gdries/lcc05-driessenindutch LCC In Dutch? Usage of Dutch regional languages and dialects]. Geert Driessen (2005). </ref><ref>[http://www.geertdriessen.nl/wp-content/uploads/2014/11/rap2012-ontwikkeling-dialecten-driessen.pdf Dr. Geert Driessen, Ontwikkelingen in het gebruik van Fries, streektalen en dialecten in de periode 1995-2011] p. 3. ITS, Radboud Universiteit Nijmegen. Eraodpleegd op 29 april 2017.</ref>:
+{| class="wikitable"
+|+Percentage sprekers
+!
+!1995
+!1997
+!1999
+!2001
+!2003
+!2011
+|-
+|Olders
+|34
+|28
+|30
+|24
+|28
+|15
+|-
+|Kind-moe
+|7
+|6
+|6
+|5
+|5
+|1
+|-
+|Kind-va
+|8
+|7
+|7
+|6
+|6
+|2
+|-
+|Kind-breurs/zussen
+|7
+|6
+|6
+|5
+|4
+|1
+|-
+|Kind-vrenden
+|6
+|5
+|6
+|5
+|4
+|1
+|}
 
 ===Duutslaand===
 Et antal aktieve sprekers van et Nedersaksisch wördt veur Duutslaand vake rond de 5,5 miljoen eschat,<ref name="staff.uni-oldenburg.de">Volgens http://www.staff.uni-oldenburg.de/gabriele.diekmann-droege/9361.html</ref> waorvan zo'n vier miljoen meensen de taal goed tot uutstekend kunnen spreken.<ref>27% van bevolking van Sleeswiek-Holsteen, 23% van Mekelenbörg-Veurpommeren, 14% van Nedersaksen, 10% van Noordrijn-Westfaolen en nog es 5% van Braandenbörg en Saksen-Anhalt, samen zo'n vier miljoen – nog niet inbegrepen bin Hambörg en Bremen en de rond 200.000 sprekers van et [[Plautdietsch]], die overwegend buten de onderzeuksgebiejen woenen, antallen volgens [http://www.germsem.uni-kiel.de/ndnl/materialien/Lehre%20Prof.%20Elmentaler%20Sommer%2010/pdf-Folien%20Vorlesung%20Standard%20und%20Substandard%20SoSe%202010/Kopie%20von%20pdf-Folien/8.pdf ''Vorlesung „Niederdeutsch in Geschichte und Gegenwart“ – Niederdeutsch heute: Eine Bestandsaufnahme''] (citaot van Frerk Möller: ''Plattdeutsch im 21. Jahrhundert. Bestandsaufnahme und Perspektiven.'' Leer 2008, S. 22&nbsp;f.)</ref> Zo'n 10,2 miljoen Duutsers hebben enige passieve kennis van et Nedersaksisch en zo'n twee miljoen meensen spreken et vake.<ref name="staff.uni-oldenburg.de"/> Hierbie koemen de rond 200.000 sprekers van et [[Plautdietsch]], die overwegend buten de onderzeuksgebiejen woenen en bin daorumme dus oek niet mee-eneumen in de telling. Et antal passieve sprekers, dit wil zegen de meensen die et Nedersaksisch verstaon, wördt vake mit tien miljoen en hoger an-egeven veur Duutslaand, mer disse antallen kunnen oek veule hoger liggen (kiek hierboven).
