*Empty MediaWiki Message*

--- a/Dever.mw
+++ b/Dever.mw
@@ -3,6 +3,8 @@
 
 Een bi'jnaeme veur de inwoners van Dever is ''Deverse platneuzen''.
 
+diffa city
+
 == Geschiedenis ==
 [[Ofbeelding:Hervormde_Karke_Dever.jpg|thumb|220px|right|De karke van Dever wodt as ien van de mooiste van Drenthe beschouwd]]
 Lichtkaans woonden al 6.000 jaor leden meensken op et gebied waor Dever now leit. De boeren uut de laete [[stientied]] bouwden vlakbi'j Dever een [[hunebed]] dat d'r nog de hieltied leit.
