[[:Kategorie:Programmatuur]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Videospel.mw
+++ b/Videospel.mw
@@ -17,3 +17,4 @@ Al sint videospellen oorsprunglik vöär de wille, toch wordet se steyds seriös
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Spel]]
+[[Kategorie:Programmatuur]]
