Sortering van [[:Kategorie:Rieksweg 15]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/Rieksweg_15.mw
+++ b/Rieksweg_15.mw
@@ -10,5 +10,5 @@ De '''Rieksweg 15''', ook wel '''N18, A18, N15 en A15''', ok wal 'Twenteroute' e
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Weg in Gelderlaand]]
 [[Kategorie:Weg in Oaveriessel]]
-[[Kategorie:Rieksweg 15]]
+[[Kategorie:Rieksweg 15| ]]
 [[Kategorie:Weg in Zuud-Hollaand]]
