*Empty MediaWiki Message*

--- a/Mick_Jagger.mw
+++ b/Mick_Jagger.mw
@@ -1,8 +1,8 @@
 [[File:Mick_Jagger_Deauville_2014.jpg|thumb|right|Foto van Mick Jagger in 2014]]
 
-'''Sir Michael Philip Jagger''' (van den [[26 juli|26. juli]] [[1943]]) is nen [[Groutbrittannie|britsken]] sanger, leedkesskryver, [[akteur|aktöör]] en filmmaker den as wearldwyd bekend is as sanger en uprichter van de [[Rolling Stones]]. Jagger is al meyr vyvtig jår gangs en wördt seen as eyne van de "populäärste en meyst invloodryke bandleiders in de geskydenisse van de rock 'n' roll."<ref>[https://www.allmusic.com/artist/mick-jagger-mn0000892823 Erlewine, Stephen Thomas. "Mick Jagger Biography". AllMusic. Bekeaken up 25 january 2021]</ref> Syne upmarkelike stemme en uutbündige uptreadens en et gitaarwark van [[Keith Richards]] wordet seen as et handelsmark van de Rolling Stones. Jagger kreag de pers achter sik an döär syne leevdesverholdingen en wördt vake afeskilderd as en teagendråds kultureel figuur.
+'''Sir Michael Philip Jagger''' (van den [[26 juli|26. juli]] [[1943]]) is nen [[Groutbrittannie|britsken]] sanger, leedkesskryver, [[akteur|aktöör]] en filmmaker den as wearldwyd bekend is as sanger en uprichter van de [[Rolling Stones]]. Jagger is al meyr vyvtig jår gangs en wördt seen as eyne van de "populäärste en meyst invloodryke bandleiders in de geskydenisse van de rock 'n' roll."<ref>[https://www.allmusic.com/artist/mick-jagger-mn0000892823 Erlewine, Stephen Thomas. "Mick Jagger Biography". AllMusic. Bekeaken up 25 january 2021]</ref> Syne upmarkelike stemme en uutbündige uptreadens en et gitaarwark van [[Keith Richards]] wordet seen as et handelsmark van de Rolling Stones. Jagger kreag de pers achter sik an döär syne leevdesverholdingen en wördt vake afeskilderd as nen kulturelen drådnaegel.
 
-Jagger is geboren en upegroid in [[Dartford]] in [[Kent]]. Vöär at hee by de Rolling Stones güng, güng hee hen studeren an de London School of Economics. Jagger hevt med Keith Richard de meyste nummers van de Rolling Stones eskreaven en see warket noch altyd samen. In de tweyde hälvde van de jåren '60 van den 20. eyw spöälden Jagger med in de films ''Performance'' (1970) en ''Ned Kelly'' (1970), al was dår neet alleman eaven good oaver te sprekken. Vanaf [[1985]] probeerden hee et te maken as soloartist, med en album ''She's the Boss''. In [[2009]] probeerden hee et noch es, med ne elektroniske musikgrup SuperHeavy. In de tachtiger jåren kunde hee al minder med de andere leaden van de Rolling Stones, vöäral med Keith Richards. Toch hevt hee med de Rolling Stones noch altyd meyr sukses ehad as med syne eygene sydprojekten.
+Jagger is geboren en upegroid in [[Dartford]] in [[Kent]]. Vöär at hee de Rolling Stones uprichteden, güng hee hen studeren an de London School of Economics. Jagger hevt med Keith Richard de meyste nummers van de Rolling Stones eskreaven en see warket noch altyd samen. In de tweyde hälvde van de jåren '60 van den 20. eyw spöälden Jagger med in de films ''Performance'' (1970) en ''Ned Kelly'' (1970), al was dår neet alleman eaven good oaver te sprekken. Vanaf [[1985]] probeerden hee et te maken as soloartist, med en album ''She's the Boss''. In [[2009]] had hee noch en sydprojekt, med ne elektroniske musikgrup SuperHeavy. In de tachtiger jåren kunde hee al minder med de andere leaden van de Rolling Stones, vöäral med Keith Richards. Toch hevt hee med de Rolling Stones noch altyd meyr sukses ehad as med syne eygene sydprojekten.
 
 In [[1989]] wör Jagger upenöämen in de Hall of Fame van de Rock and Roll, in [[2004]] in de Music Hall of Fame van et [[Vereynigd Köäningryk|VK]]. Beide med en sunder de Rolling Stones wüst hee med 13 singles nummer eyne te worden in britske en [[Vereynigde Ståten|amerikaanske]] hitlysten, de top teene te halen med 32 singles en de top 40 med 70 singles. 
 
