--- a/2021.mw
+++ b/2021.mw
@@ -7,6 +7,8 @@
 *15 januari - Er wördt eschat det zo'n twie miljoen meansen uut de tied bint egaon deur [[COVID-19]].
 *20 januari - Joe Biden wördden de 46e president van de [[Verienigde Staoten van Amerika]].
 *23 januari - Veur et eerst sinds de [[Twiede Wereldoorlog]] is er in Nederlaand weer een [[aovendklok]]. De aovendklok is in ezet teagen et [[COVID-19|coronavirus]] en duurt töt 10 februari. Van 21:00 töt 04:30 uur mogen allenig meansen met een 'Eigen verklaoring aovendklok' op straote wean.
+*24 januari - Rellen in verschillende Nederlaandse steden en op aandere plekken
+*25 januari - Opni'j rellen in verschillende plekken in Nederlaand.
 *10 juni - In [[Noord-Amerika]], [[Europa]] en [[Azië]] is er een ringvörmige [[zunsverduustering]] te zien.
 *4 december - Op [[Antarctica]] en in dielen van de [[Grote Oceaan]] is er een totaole zunsverduustering te zien.
 
