--- a/King_Tubby.mw
+++ b/King_Tubby.mw
@@ -10,12 +10,12 @@ Up den 6. february van [[1989]] wör hee vöär syn huus in de wyke [[Waterhouse
 
 ==Loupbane==
 
-King Tubby groiden up in de tyd at [[soundsystem]]s, illegale rundrydende reggaespöälers, döär Kingston reyden. Dat wörden steyds kommercielere underneamingen. King Tubby was handig med radio's repareren en had al gauw souwat alle tounangeavende soundsystems as klant. Et tropiske weader (en sabotage van rivaliserende soundsystems) was der vake neet best vöär.<ref>Thompson, Dave (2002) ''Reggae & Caribbean Music'', Backbeat Books, ISBN 0-87930-655-6. p. 138–141.</ref> Up Drumalie Avenie stichteden hee en herstelbedryvken vöär radio's en televisys. Dår begünde hee groute verstarkers te bouwen vöär lokale soundsystems. Tusken [[1961]] en [[1962]] bouwden hee nen [[geheimen sender]], wårmed hee [[ska]] en [[rhythm and blues]] spöälden. Dat gavven hee rap up do as hee gewår wörden at de polity der achteran sat.<ref>"[https://www.bbc.co.uk/1xtra/dancehallafterdark/jammy.shtml King Jammy interview]", [[BBC]], 2005. Bekeaken up 30 April 2016.</ref> Uuteandelik bouwden King Tubby in [[1968]] syn eygene soundsystem under de name Tubby's Hometown Hi-Fi<ref>Bonitto, Brian (2012) "[http://www.jamaicaobserver.com/entertainment/King-Tubby--the-sound-creator_11886528 King Tubby, the sound creator]", ''[[Jamaica Observer]]'', Skreaven up 6 july 2012, Bekeaken up 13 july 2012.</ref> Döär de houge geluudskwaliteit, syne uutgaven dee as nargens anders te höyren warren en syne spöälerye med geluudseffekten as [[echo (geluud)|echo]] en [[galm]] (dårvöär noch nooit eyrder dån) wör hee al rap nen publiksleveling. Et hülp ouk de loupbane van [[U-Roy]], den vasten [[Deejay (Jamaika)|toaster]] by et soundsystem.<ref>[https://books.google.com/books?id=Rq_7iIvMvYgC&q=u-roy+and+king+tubbys+hometown+hifi&pg=PT200 Masouri, John. "Wailing Blues: The Story of Bob Marley's Wailers". Omnibus Press, 2009. ISBN 978-0857120359.] Bekeaken up den 22. juni 2020.</ref>
+King Tubby groiden up in de tyd at [[soundsystem]]s, illegale rundrydende reggaespöälers, döär Kingston reyden. Dat wörden steyds kommercielere underneamingen. King Tubby was handig med radio's repareren en had al gauw souwat alle tounangeavende soundsystems as klant. Et tropiske weader (en sabotage van rivaliserende soundsystems) was der vake neet best vöär.<ref>Thompson, Dave (2002) ''Reggae & Caribbean Music'', Backbeat Books, ISBN 0-87930-655-6. p. 138–141.</ref> Up Drumalie Avenie stichteden hee en herstelbedryvken vöär radio's en televisys. Dår begünde hee groute verstarkers te bouwen vöär lokale soundsystems. Tusken [[1961]] en [[1962]] bouwden hee nen [[geheimen sender]], wårmed hee [[ska]] en [[rhythm and blues]] spöälden. Dat gavven hee rap up do as hee gewår wörden at de polity der achteran sat.<ref>[https://www.bbc.co.uk/1xtra/dancehallafterdark/jammy.shtml King Jammy interview]", [[BBC]], 2005. Bekeaken up 30 April 2016.</ref> Uuteandelik bouwden King Tubby in [[1968]] syn eygene soundsystem under de name Tubby's Hometown Hi-Fi<ref>Bonitto, Brian (2012) "[http://www.jamaicaobserver.com/entertainment/King-Tubby--the-sound-creator_11886528 King Tubby, the sound creator]", ''[[Jamaica Observer]]'', Skreaven up 6 july 2012, Bekeaken up 13 july 2012.</ref> Döär de houge geluudskwaliteit, syne uutgaven dee as nargens anders te höyren warren en syne spöälerye med geluudseffekten as [[echo (geluud)|echo]] en [[galm]] (dårvöär noch nooit eyrder dån) wör hee al rap nen publiksleveling. Et hülp ouk de loupbane van [[U-Roy]], den vasten [[Deejay (Jamaika)|toaster]] by et soundsystem.<ref>[https://books.google.com/books?id=Rq_7iIvMvYgC&q=u-roy+and+king+tubbys+hometown+hifi&pg=PT200 Masouri, John. "Wailing Blues: The Story of Bob Marley's Wailers". Omnibus Press, 2009. ISBN 978-0857120359.] Bekeaken up den 22. juni 2020.</ref>
 
 ==Remixes==
 King Tubby begün med warken as skyvensnyder vöär platenbaas [[Duke Reid]] in [[1968]]. Reid was in dee tyd ne groute name, med nen eygenen upnamestudio, [[Treasure Isle]]. Et was eyne van Jamaika's eyrste unafhangelike musikhüse en ne vöärname steade in de untwikkeling van [[ska]], [[rocksteady]] en [[reggae]]. Vöär at de ''dub'' uutevünden wör, hadden de meyste 45-singelkes ne instrumentale versy up de andere kante, wat de 'version' nöömd wör. Dee wörden weader gebruked döär toasters en andere artisten, üm der nen eygen drai an te geaven. Do as King Tubby vrågd wör üm disse ''versions'' te maken, deade hee dat anvangelik up Reid syn mengtåfel döär de sangpartyen weg te draien. Mär al rap küm hee der achter dat hee up den mengtåfel deylen kunde benådrükken en weglåten en der nye effekten as swåre galmen en echo's, [[phaser (geluud)oaverhen setten. Dårmed makeden hee der vulleydig nye nummers van. Under meyr döär disse [[remix]]es wör King Tubby syn soundsystem eyne van de populäärsten in Kingston. Dårup beslöät hee in [[1971]] nen eygenen studio lös te doon in Waterhouse, wår hee eyrst begün med ne enkele 4-spoarsmengtåfel, dee as hee oaverkocht had van [[Byron Lee]].
 
-===Dub music production===
+===Dubmusikprodukty===
 Döär syn musikproduktywark groiden King Tubby in de jåren '70 uut töt nen Bekenden Jamaikaan. Geluudstechnici en musikproducenten van oaver de heyle wearld wolden weaten wo as hee syn wark deade. Döär syn groute kennis van herstelwark an elektronika kunde hee syn eygene studiogerei bouwen. Dårvöär gebröäk hee vake olde apparaten en mengden dee med nye techniken. In synen studio untwikkelden hee precyse, sweaverige geluden, wat syn handelsmark wör. Döär verskillende effektendösen an synen mengtåfel te koppelen wör dat syn instrument. Når synen smak draiden hee instrumenten en sangstemmen når de vöär- of achtergrund (letterlik ''dubben''), soudat en vulleydig ny nummer en dårmed en heyl nyen musikstyl untstünd. Al in [[1971]] wüsten groute studiobasen as [[Glen Brown]] en [[Lee "Scratch" Perry]] em te vinden.
 
 In synen studio was gin rüümde vöär musikanten. Selv upneamen kunde hee düs neet. Meyrspoarige masterupnames haalden hee döär synen selv-ebouwden [[MCI (geluud)|MCI]] van 12 kanalen. Sou kreag et geluud ne unverwachtse samenstelling en kümmen [[basgitaar|bas]] en [[drums]] meyr up den vöärgrund. Tüskendöär klünken dan refels van stemmen, blåsers, piano en örgel. Et warren techniken dee al döär andere soundsystems dån wörden, mär dee deaden wat vöärsichtig med [[ekwalisaty (geluud)|EQ]]-frekwentys draien. King Tubby tilden dit når nye höygdes. Vake verdraiden hee reggaehits sou slim dat se unherkenbår wörden en as nye nummers gölden. Eyne van syne unike kenmarken was et gebruuk van en [[high-pass filter]] under synen sou-genöömden ''Big Knob'', wårmed as hee as em dat uutküm de laege tounen vortdraiden en et geluud bekneap, töt der neet meyr as nen hougen dünnen rüüs oaverbleav. Vake deade hee dat med de blåsers.
