*Empty MediaWiki Message*

--- a/King_Tubby.mw
+++ b/King_Tubby.mw
@@ -4,7 +4,7 @@
 
 Hee wüst et draien an knöppe en spöälen med frekwentys en geluudseffekten töt kunstform te verheffen. Med syn vernyende studiowark leade King Tubby de grundbeginselen vöär latere DJs en musikproducenten in de [[pop]], [[rock]], [[hiphop]] en elektroniske musik. Hee wördt algemeyn eseen as den uutvinder van de ''remix'', nen bewarking van en origineel nummer, wat in latere [[dance]] en andere elektroniske musik neet meyr weg te denken is.
 
-King Tubby had ne upleiding as elektrotechnikus. Sanger [[Mikey Dread]] segt dårvan: "King Tubby begreap geluud up ne weatenskappelike wyse. Hee wüst wo as circuits warket en wat de elektronen deaden. Dårdöär kunde hee wat hee kunde."<ref>[Du Noyer, Paul (2003). "The Illustrated Encyclopedia of Music". 1. ed. Flame Tree Publishing. Fulham, London. ISBN 1-904041-96-5. p 356-357.<ref>
+King Tubby had ne upleiding as elektrotechnikus. Sanger [[Mikey Dread]] segt dårvan: "King Tubby begreap geluud up ne weatenskappelike wyse. Hee wüst wo as circuits warket en wat de elektronen deaden. Dårdöär kunde hee wat hee kunde."<ref>[Du Noyer, Paul (2003). "The Illustrated Encyclopedia of Music". 1. ed. Flame Tree Publishing. Fulham, London. ISBN 1-904041-96-5. p 356-357.</ref>
 
 Up den 6. february van [[1989]] wör hee vöär syn huus in de wyke [[Waterhouse]] in [[Kingston]] doudesköäten en beröyvd.
 
