*Empty MediaWiki Message*

--- a/King_Tubby.mw
+++ b/King_Tubby.mw
@@ -1,4 +1,4 @@
-[[File|King_Tubby.jpg|thumb|right|200px|King Tubby]]
+[[File:King_Tubby.jpg|thumb|right|200px|King Tubby]]
 
 '''Osbourne Ruddock''' ([[28 jannewaori|den 28. january]] [[1941]] - [[6 febrewaori|den 6. february]] [[1989]]), beater bekend under syne artistenname '''King Tubby''', was nen [[Jamaika|jamaikaansken]] geluudstechnikus den as grouten invlood had up et untstån van [[dubreggae]] in de jåren '60 en '70 van den [[20e eeuw|20. eyw]] en ouk up dåruut untståne andere musikstylen.
 
