--- a/Nedersaksische_skeeldwöarde.mw
+++ b/Nedersaksische_skeeldwöarde.mw
@@ -828,7 +828,7 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 *[[Achterhooks]]: 
 *[[Drèents]]:
 *[[Grönnegs]]:
-*[[Sallaands]]:
+*[[Sallaands]]: Swolss krantje (Zwolle)
 *[[Stellingwarfs]]:
 *[[Tweants]]:
 *[[Veluws]]:
