Reverted edits by [[Special:Contribs/2001:1C01:2C02:4F00:4C21:9A32:3D40:EE0A|2001:1C01:2C02:4F00:4C21:9A32:3D40:EE0A]] ([[User talk:2001:1C01:2C02:4F00:4C21:9A32:3D40:EE0A|talk]]) to last version by 145.53.191.46: test edits, please use the sandbox

--- a/Urk.mw
+++ b/Urk.mw
@@ -20,9 +20,7 @@ webstee = [http://www.urk.nl www.urk.nl] |
 }}
 '''Urk''' (eutspraak: ''Urrek'') is mit dik 21.000 inwoeners op een oppervlakte van zo'n 109,91 km² (waorvan 't aldergrootste gedielte waoter) de kleanste [[gemiente (bestuur)|gemiente]] van de [[Nederlaand]]se [[pervincie|previnsie]] [[Flevolaand]]. Urk is een vuurmaolig eilaand in de [[Zujerzee|Zuierzie]] (tot de ofwarking van de [[Ofsluutdiek|Ofsleutdik]] [[1932]]) in 't [[Iesselmeer|IJsselmeer]] tot [[1939]]. In 1939 was de dik die Urk mit [[De Lemmer|Limmer]] verboend klaor in in [[1942]] worde de [[Noordoostpolder]] droog-emaolen.
 
-Urk kan omskrieven worren as de miest ([[protestantisme|protestants]])-[[christendom|christelijke]] gemiente van Nederlaand. 't Is een echte in besluten gemienskap. 't Plaoselijke [[dialect]], 't [[Urkers]], is nog beutengewoen levendig in wikt vuul of van alle dialecten eut de omgieving. Urk et vareweg de grooste vissersvloot van Nederlaand
-
-Urk staat ook bekend om een test straat in brand te steken, stelletje debielen  :)
+Urk kan omskrieven worren as de miest ([[protestantisme|protestants]])-[[christendom|christelijke]] gemiente van Nederlaand. 't Is een echte in besluten gemienskap. 't Plaoselijke [[dialect]], 't [[Urkers]], is nog beutengewoen levendig in wikt vuul of van alle dialecten eut de omgieving. Urk et vareweg de grooste vissersvloot van Nederlaand.
 
 == Geskiedenis ==
 De oudst bekinde vermelding van de naam 'Urk' is de skinkingsakte van keizer Otto I an 't Sint-Pantaleonsklooster te [[Keulen]]. De tekst is: ''cuiusdam insulae medietatem in Almere, que Urch vocatur'' (de elft van een zieker eilaand in 't Almere, dat Urch eneumd wort).
