/* Plempen van eilanden */ minteken

--- a/IJ_(rivier).mw
+++ b/IJ_(rivier).mw
@@ -20,7 +20,7 @@ Veur den bouw van den Afrika-haven wierd nen polder an-elegd woarin dree eilaand
 
 In et IJmeer ligt et geplempte [[Fort Pampus]], as onderdeal van de [[Stelling van Amsterdam]].
 
-Et [[waterpeil]] van et Buten-IJ wöd samen met et IJmeer en et Markermeer op een winterpeil van [[Normaal Amsterdams Peil|NAP]] -0,40 m en een zommerpeil van NAP -0,20 m eholden, deur middel van [[spuien]] en bemoalen. Et dreg ok bi-j an de drinkwaterveurzening van meer as 1 miljoen Nederlanders, umdat et in verbinding steet met et Markermeer en deals et Iesselmeer. Et [[Iesselmeer]] is et grootsten zeutwaterbekken van Nederlaand.
+Et [[waterpeil]] van et Buten-IJ wöd samen met et IJmeer en et Markermeer op een winterpeil van [[Normaal Amsterdams Peil|NAP]] −0,40 m en een zommerpeil van NAP −0,20 m eholden, deur middel van [[spuien]] en bemoalen. Et dreg ok bi-j an de drinkwaterveurzening van meer as 1 miljoen Nederlanders, umdat et in verbinding steet met et Markermeer en deals et Iesselmeer. Et [[Iesselmeer]] is et grootsten zeutwaterbekken van Nederlaand.
 
 ==IJ-veren==
 
