--- a/Eek_(boom).mw
+++ b/Eek_(boom).mw
@@ -48,7 +48,7 @@ Ofbeelding:Quercus robur.jpg
 * [[Sallaans]]:
 **[[Vechtdals]]:
 ** ''eekn(boom)''
-** ''iekn(noom)''
+** ''iekn(boom)''
 * [[Stellingwarfs]]:
 ** ''iek''
 ** ''ekkelboom''
