/* Vuur- en noadelen */

--- a/Potlood.mw
+++ b/Potlood.mw
@@ -14,7 +14,7 @@ Bekeande rechtevoortse potloodmakers zeent Staedtler, Conté, Caran d'Ache, Bruy
 
 ==Vuur- en noadelen==
 Potleude zeent lecht te broeken. Ze zeent goodkoop, herbroekboar, makkelik te sliepen met nen [[peuntenslieper]] of [[mes]], et tekende of skrewene is makkelik oet te wisken, iej köant ze in alle kluren kriegen en ze zeent vealig vuur keender. 
-Noadeel van potleude is det de grafietstifte neet al te stewig is. A'j et potlood loat vallen, kan de stifte van binnen brekken. Dan kö'j der gin kracht mear met zetten, want dan vaalt de peunte der oet a'j ne sliept töt kort an de brökke.
+Noadeel van potleude is det de grafietstifte neet al te stewig is. A'j et potlood loat vallen, kan de stifte van binnen brekken. Dan kö'j der gin kracht mear met zetten, want dan vaalt de peunte der oet a'j ne sliept töt kort an de brökke. Een aander noadeel is dat et eskrewene of tekende noa nen set vervagen kan.
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Skriefgerei]]
